--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 <div class="col-lg block p-4">
                     <div class="p-2">
                         <h1>Fortnite Stats Tracker</h1>
-                        <img class="project-img py-4" src="images/fortnite.PNG" alt="">
+                        <img class="project-img py-4" src="images/fortnite.png" alt="">
                         <p>This application uses the Fortnite Game API to display your game stats based on your Epic Games username, and the platform you want to see your stats for. This application is coded in HTML and CSS, as well as Node.js and Javascript due to the simplicity of passing and returning values between the backend and front-end Javascript.</p>
                         <div class="project-btns">
                             <div class="project-btn-container"><a class="project-btn project-btn-left py-2 px-3" href="https://github.com/Redennison/fortnite-tracker">Source Code</a></div>
@@ -113,7 +113,7 @@
                 <div class="col-lg block p-4">
                     <div class="p-2">
                         <h1>Life Saver</h1>
-                        <img class="project-img py-4" src="images/lifesaver.PNG" alt="">
+                        <img class="project-img py-4" src="images/lifesaver.png" alt="">
                         <p>This application allows quick access to treatments for a variety of injuries and probable diagnoses based on syptoms, sorted from most to least probable. It also provides users with treatments based on inputed injuries in case the user knows the condition at hand, and would like to be able to access the treatment faster. This application is mainly coded in Javascript</p>
                         <div class="project-btns">
                             <div class="project-btn-container"><a class="project-btn project-btn-left py-2 px-3" href="https://github.com/Redennison/Life-Saver">Source Code</a></div>
@@ -126,7 +126,7 @@
                 <div class="col-lg block p-4">
                     <div class="p-2">
                         <h1>SMS Application</h1>
-                        <img class="project-img py-4" src="images/grouptext.PNG" alt="">
+                        <img class="project-img py-4" src="images/grouptext.png" alt="">
                         <p>This application uses MongoDB and Node.js to allow users to register and login. It also allows users to create, delete, edit, and send text messages to lists of people within the app. This application solves a problem for many coaches and others who need to communicate with many groups of people.</p>
                         <div class="project-btns">
                             <div class="project-btn-container"><a class="project-btn project-btn-left py-2 px-3" href="https://github.com/Redennison/SMS-Application">Source Code</a></div>
@@ -139,7 +139,7 @@
                 <div class="col-lg block p-4">
                     <div class="p-2">
                         <h1>Tutor Center</h1>
-                        <img class="project-img py-4" src="images/tutor.PNG" alt="">
+                        <img class="project-img py-4" src="images/tutor.png" alt="">
                         <p>Tutor Center is an application my team and I created in a hackathon which uses SQL-Alchemy and Flask to allow users to register, login, and filter tutors based on the grade and subject they teach. It also allows users to become a listed tutor on the website, as well as write reviews on tutors.</p>
                         <div class="project-btns">
                             <div class="project-btn-container"><a class="project-btn project-btn-left py-2 px-3" href="https://github.com/Redennison/Tutor-Centre">Source Code</a></div>
