--- a/index.html
+++ b/index.html
@@ -26,15 +26,40 @@
             </div>
             <div class="col-lg p-2" data-aos="fade-left" data-aos-duration="1000">
                 <h1 class="nav-center">About Me</h1>
-                <p style="text-align:center;" class="p-2 ab-me-p">A results-driven high school student hoping to complete a degree in computer science/software engineering. I am involved in many sports including ski racing and tennis. I am also certified in Standard First Aid, and have completed Bronze Medallion/Cross, as well as National Lifeguard, Swim Instructor, and Lifesaving Instructor courses. I have been working as a Lifeguard/Swim Instructor for a couple months now, and hope to also work as a part-time ski racing coach.</p>
+                <p style="text-align:center;" class="p-2 ab-me-p">A results-driven high school student hoping to complete a degree in computer science/software engineering. I am involved in many activities such as tennis, ski racing, and fitness. I am also certified in Standard First Aid, and have completed Bronze Medallion/Cross, as well as National Lifeguard, Swim Instructor, and Lifesaving Instructor courses. I have been working as a Lifeguard/Swim Instructor for over a year, and also worked as a ski racing coach over the winter.</p>
             </div>
         </div>
-
+<!-- 
         <div class="row mt-5" data-aos="fade-up" data-aos-duration="1000">
             <div class="col-lg block p-4">
                 <div class="p-2">
                     <h1>Skiing</h1>
                     <p>I am a competitive ski racer who has competed at the provincial, national, and international level, qualifying for the Whistler Cup twice (2018/2019), as well as the U14 and U16 provincials. I was also part of my high school's varsity ski team in grade 9 and placed 1st, 3rd, and 4th in regional races with a placement of 3rd in the regional finals as shown <a href="https://drive.google.com/file/d/1veaF7v4R16UhDuT1z_nVBY4k5_G1HBTj/view?usp=sharing">here</a>. Below are some videos of my ski racing training as well as a goPro montage I filmed at Whistler Blackcomb:</p>
+                    <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                        <div class="carousel-inner">
+                            <div class="carousel-item active">
+                                <div><div class="video-container">
+                                    <iframe class="utube-video" src=url frameborder="0" allowfullscreen></iframe>
+                                </div></div>
+                            </div>
+                            <div class="carousel-item">
+                                <div><div class="video-container">
+                                        <iframe class="utube-video" src="https://www.youtube.com/embed/fMFcXDJyQ_s" frameborder="0" allowfullscreen></iframe>
+                                </div></div>
+                            </div>
+                            <div class="carousel-item">
+                                <img class="d-block w-100" src="..." alt="Third slide">
+                            </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
                     <div id="carouselExampleIndicators" class="carousel slide" data-bs-interval="false">
                         <div class="carousel-inner">
                             <div class="carousel-item active">
@@ -67,29 +92,28 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <div class="row mt-5" data-aos="fade-up" data-aos-duration="1000">
             <div class="col-lg block p-4">
                 <div class="p-2">
                     <h1>Programming</h1>
-                    <p>As mentioned above, I have a passion for computer science. I have competed in hackathons as well as other programming contests such as the Senior <a href="https://cemc.uwaterloo.ca/contests/computing.html">Canadian Computing Competition</a>. Furthermore, I have developed multiple projects which are displayed below.</p>
+                    <p>I have competed in multiple hackathons and other programming contests such as the Senior <a href="https://cemc.uwaterloo.ca/contests/computing.html">Canadian Computing Competition</a>. Furthermore, I have developed multiple projects which are displayed below.</p>
                     <h4 class="small-title">Proficient Languages and Technologies</h5>
                     <div class="languages py-2">
-                        <img class="img" src="https://image.flaticon.com/icons/png/512/919/919828.png" alt="">
-                        <img class="img" src="https://image.flaticon.com/icons/png/512/919/919852.png" alt="">
-                        <img class="img" src="https://th.bing.com/th/id/R.149552db56d83912887736d23b9f7166?rik=rgrE5e5hNo0NOg&pid=ImgRaw" alt="">
-                        <img class="img" src="https://cdn.iconscout.com/icon/free/png-256/mongodb-3-1175138.png" alt="">
-                        <img class="img" src="https://cdn2.iconfinder.com/data/icons/metro-uinvert-dock/256/HTML5.png" alt="">
-                        <img class="img" src="https://cdn4.iconfinder.com/data/icons/flat-brand-logo-2/512/css3-512.png" alt="">
-                        <img class="img" src="https://image.flaticon.com/icons/png/512/2306/2306022.png" alt="">
-                        <img class="img" src="https://prod-static.onecache.com/cdn/farfuture/kdcZ8kbsw2dNlmRKxapxDM--jUre_GMLPfD9TDTDA-U/1603734000/sites/default/files/images/nodejs_0.png" alt="">
+                        <img class="img" src="./images/python.png" alt="">
+                        <img class="img" src="./images/javascript.png" alt="">
+                        <img class="img" src="./images/c++.png" alt="">
+                        <img class="img" src="./images/mongodb.png" alt="">
+                        <img class="img" src="./images/html.png" alt="">
+                        <img class="img" src="./images/css.png" alt="">
+                        <img class="img" src="./images/nodejs.png" alt="">
                     </div>
                     <h4 class="small-title py-2">Hackathons</h4>
                     <ul>
-                        <li><a href="https://www.hackthefog.com/" target="_blank">Hack the Cloud 2.0</a> - A San Francisco hackathon where my team developed an application called Tutor Centre and were awarded <a href="https://drive.google.com/file/d/1cg8ZZakpD2U_g4vCnpFx9mRVNVTFqZ-z/view?usp=sharing" target="_blank">6th place</a></li>
+                        <li>Hack the Cloud 2.0 - A San Francisco hackathon where my team developed an application called Tutor Centre and were awarded <a href="https://drive.google.com/file/d/1cg8ZZakpD2U_g4vCnpFx9mRVNVTFqZ-z/view?usp=sharing" target="_blank">6th place</a></li>
                         <li><a href="https://hackthenorth.com/" target="_blank">Hack the North</a> - A hackathon hosted by the University of Waterloo</li>
-                        <li><a href="https://ohacksio.org/" target="_blank">OHacksIO</a> - A hackathon hosted by Major League Hacking hackathon</li>
+                        <li>OHacksIO - A hackathon hosted by Major League Hacking hackathon</li>
                     </ul>
                 </div>
             </div>
@@ -99,12 +123,38 @@
             <div class="row mt-3 project" data-aos="fade-right" data-aos-duration="1000">
                 <div class="col-lg block p-4">
                     <div class="p-2">
+                        <h1>Tutor Centre</h1>
+                        <img class="project-img py-4" src="images/tutor.png" alt="">
+                        <p>Tutor Center is an application my team and I created in a hackathon which uses SQL-Alchemy and Flask to allow users to register, login, and filter tutors based on the grade and subject they teach. It also allows users to become a listed tutor on the website, as well as write reviews on tutors.</p>
+                        <div class="project-btns">
+                            <div class="project-btn-container"><a class="project-btn project-btn-left py-2 px-3" href="https://github.com/Redennison/Tutor-Centre">Source Code</a></div>
+                            <div class="project-btn-container"><a class="project-btn py-2 px-3" href="https://tutor-center.herokuapp.com/">View Project</a></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-3 project" data-aos="fade-left" data-aos-duration="1000">
+                <div class="col-lg block p-4">
+                    <div class="p-2">
+                        <h1>ChemCam</h1>
+                        <img class="project-img py-4" src="images/chemcam.png" alt="">
+                        <p>ChemCam is a website which provides users with the ability to input a formula name, either through text or an image, and be displayed with the chemical formula. ChemCam supports single element, binary acid, oxyacid, covalent bond, compound, multivalent compound, acid radical, and multivalent acid radical conversions.</p>
+                        <div class="project-btns">
+                            <div class="project-btn-container"><a class="project-btn project-btn-left py-2 px-3" href="https://github.com/Redennison/ChemCam">Source Code</a></div>
+                            <div class="project-btn-container"><a class="project-btn py-2 px-3" href="https://youtu.be/LJfloeurg60">View Project</a></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-3 project" data-aos="fade-right" data-aos-duration="1000">
+                <div class="col-lg block p-4">
+                    <div class="p-2">
                         <h1>Fortnite Stats Tracker</h1>
                         <img class="project-img py-4" src="images/fortnite.png" alt="">
                         <p>This application uses the Fortnite Game API to display your game stats based on your Epic Games username, and the platform you want to see your stats for. This application is coded in HTML and CSS, as well as Node.js and Javascript due to the simplicity of passing and returning values between the backend and front-end Javascript.</p>
                         <div class="project-btns">
                             <div class="project-btn-container"><a class="project-btn project-btn-left py-2 px-3" href="https://github.com/Redennison/fortnite-tracker">Source Code</a></div>
-                            <div class="project-btn-container"><a class="project-btn py-2 px-3" href="http://fortnite.evandennison.com/">View Project</a></div>
+                            <div class="project-btn-container"><a class="project-btn py-2 px-3" href="https://fortnite-statistics-tracker.herokuapp.com/">View Project</a></div>
                         </div>
                     </div>
                 </div>
@@ -130,20 +180,7 @@
                         <p>This application uses MongoDB and Node.js to allow users to register and login. It also allows users to create, delete, edit, and send text messages to lists of people within the app. This application solves a problem for many coaches and others who need to communicate with many groups of people.</p>
                         <div class="project-btns">
                             <div class="project-btn-container"><a class="project-btn project-btn-left py-2 px-3" href="https://github.com/Redennison/SMS-Application">Source Code</a></div>
-                            <div class="project-btn-container"><a class="project-btn py-2 px-3" href="http://sms.evandennison.com/register">View Project</a></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row mt-3 project" data-aos="fade-left" data-aos-duration="1000">
-                <div class="col-lg block p-4">
-                    <div class="p-2">
-                        <h1>Tutor Center</h1>
-                        <img class="project-img py-4" src="images/tutor.png" alt="">
-                        <p>Tutor Center is an application my team and I created in a hackathon which uses SQL-Alchemy and Flask to allow users to register, login, and filter tutors based on the grade and subject they teach. It also allows users to become a listed tutor on the website, as well as write reviews on tutors.</p>
-                        <div class="project-btns">
-                            <div class="project-btn-container"><a class="project-btn project-btn-left py-2 px-3" href="https://github.com/Redennison/Tutor-Centre">Source Code</a></div>
-                            <div class="project-btn-container"><a class="project-btn py-2 px-3" href="http://tutor.evandennison.com/">View Project</a></div>
+                            <div class="project-btn-container"><a class="project-btn py-2 px-3" href="https://multi-sms-application.herokuapp.com/">View Project</a></div>
                         </div>
                     </div>
                 </div>
